# coaltest

./: .gitignore  01_image_read.cpp  06_orb_gpu.cpp  08_haar_face_gpu.cpp  09_haar_face_video.cpp  10_haar_eye_gpu.cpp  CMakeLists.txt  README.md  coaltest.cpp  facedetectcpu.cpp  gesture.py  pose_deploy.prototxt  testgpu.cpp
